Refactor markdown and code for improved clarity
Updated markdown cells for clarity and consistency, including changes to section titles and descriptions. Enhanced the function definition for better readability and added comments for clarity.

--- a/Data_analysis.ipynb
+++ b/Data_analysis.ipynb
@@ -17,7 +17,7 @@
    "metadata": {},
    "source": [
     "## 1. Data Loading\n",
-    "The loading of the dataset and initial environment setup."
+    "Loading the datasets and initial environment setup."
    ]
   },
   {
@@ -51,7 +51,7 @@
    "metadata": {},
    "source": [
     "## 2. Preprocessing & Normalization\n",
-    "Standardizing column names and scaling scores to a 0-100 range."
+    "Standardizing column names and scaling all scores to a **0-100** range."
    ]
   },
   {
@@ -121,11 +121,15 @@
   },
   {
    "cell_type": "markdown",
-   "id": "viz_md",
+   "id": "viz_image_cell",
    "metadata": {},
    "source": [
-    "## 4. Visualizing the Data\n",
-    "Generating density plots and trend lines to visualize the Critic-User gap."
+    "## 4. Visual Analysis\n",
+    "Below is the visualization of score distributions and yearly trends.\n",
+    "\n",
+    "![Review Scores Analysis Output](YOUR_IMAGE_PATH_OR_URL_HERE)\n",
+    "\n",
+    "*Note: If viewing locally, ensure the image file is in the same directory.*"
    ]
   },
   {
@@ -154,8 +158,8 @@
    "id": "func_md",
    "metadata": {},
    "source": [
-    "## 5. Controversy Analysis\n",
-    "Using a custom function to identify the top games with the highest discrepancy between groups."
+    "## 5. Annual Controversy Function\n",
+    "Identifying titles with the largest absolute gap between professional and public opinion per year."
    ]
   },
   {
@@ -165,23 +169,36 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def top_discrepancies_per_year(df, n=5):\n",
+    "def top_discrepancies_per_year(\n",
+    "    df,\n",
+    "    n=5,\n",
+    "    critic_col='critic_score',\n",
+    "    user_col='user_score',\n",
+    "    year_col='year'\n",
+    "):\n",
     "    paired = (\n",
-    "        df.dropna(subset=['critic_score', 'user_score', 'year', 'game'])\n",
-    "        .groupby(['year', 'game'], as_index=False)\n",
-    "        .agg({'critic_score': 'mean', 'user_score': 'mean'})\n",
+    "        df\n",
+    "        .dropna(subset=[critic_col, user_col, year_col, 'game'])\n",
+    "        .groupby([year_col, 'game'], as_index=False)\n",
+    "        .agg({\n",
+    "            critic_col: 'mean',\n",
+    "            user_col: 'mean'\n",
+    "        })\n",
     "    )\n",
-    "    paired['score_diff'] = paired['critic_score'] - paired['user_score']\n",
+    "    paired['score_diff'] = paired[critic_col] - paired[user_col]\n",
     "    paired['abs_diff'] = paired['score_diff'].abs()\n",
-    "    \n",
-    "    return (\n",
-    "        paired.sort_values(['year', 'abs_diff'], ascending=[True, False])\n",
-    "        .groupby('year').head(n)\n",
+    "    top_n = (\n",
+    "        paired\n",
+    "        .sort_values([year_col, 'abs_diff'], ascending=[True, False])\n",
+    "        .groupby(year_col)\n",
+    "        .head(n)\n",
     "        .reset_index(drop=True)\n",
     "    )\n",
+    "    return top_n\n",
     "\n",
-    "controversy_df = top_discrepancies_per_year(merged_clean)\n",
-    "display(controversy_df.head(10))"
+    "# Displaying result\n",
+    "controversy_results = top_discrepancies_per_year(merged_clean, n=5)\n",
+    "display(controversy_results.head(10))"
    ]
   },
   {
@@ -190,10 +207,7 @@
    "metadata": {},
    "source": [
     "### Final Summary\n",
-    "**Key Findings:**\n",
-    "1. **Bias Detection:** Professional critics consistently score games higher than users (statistically significant via T-Test).\n",
-    "2. **Polarization:** Users exhibit significantly higher variance, indicating more frequent use of extreme scores (0 or 100) compared to critics.\n",
-    "3. **Trends:** Review scores have remained relatively stable over the last decade, with minor fluctuations during major console releases."
+    "The data suggests a statistically significant gap between how critics and users perceive game value, often driven by extreme polarization in user reviews."
    ]
   }
  ],
